# libendian

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
include/endian/: endian.hpp
test/: CMakeLists.txt  endian_test.cpp
